Add basic support for a single segment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,11 +77,9 @@ sc_add_server_plugin(
     "${Automation_schelp_files}"
 )
 
-# End target Automation
-####################################################################################################
-
-####################################################################################################
-# END PLUGIN TARGET DEFINITION
-####################################################################################################
-
 message(STATUS "Generating plugin targets done")
+
+####################################################################################################
+# Core test
+
+include_directories(core)
